# naver-blog-image-downloader-lambda

./: .envExample  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  data_models.py  helper.py  job_store.py  pyproject.toml  requirements.txt  response_builder.py  router.py
.github/workflows/: cd.yml  ci.yml
docs/: README_en-US.md  README_zh-TW.md
job_store/: __init__.py  base.py  job.py  log.py  whats_new.py
mock/: mock_whats_new_en.json  mock_whats_new_ja.json  mock_whats_new_ko.json  mock_whats_new_zh-TW.json
routes/: __init__.py  photos.py
scripts/: deploy-image.sh  manage_whats_new.py  setup-aws-resources.sh  update-function.sh
src/: data_models.py  helper.py  response_builder.py
src/job_store/: whats_new.py
src/routes/: whats_new.py
tests/: api.http
