[project]
name = "naver-blog-image-downloader-lambda"
version = "1.4.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (由 formatter 處理)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
